--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body onload="carregarMapa()">
     <h1>Mapa de Disponibilidade</h1>
     <div id="mapa-container" style="position: relative;">
-        <img src="mapa.png" width="800" id="mapa">
+        <img src="implantacao.png" width="800" id="mapa">
     </div>
     <script src="script.js"></script>
 </body>
